# NeolibriOS

./: .editorconfig  .gitignore  README.md  build.sh  build.txt  build_noimg.sh  make_image.py  meson.build  meson_options.txt
data/common/fs/: icons.ini  kfar.ini
data/common/settings/: system.ini
data/en_US/settings/: icon.ini
data/ru_RU/fs/: kfar.ini
data/ru_RU/settings/: icon.ini
drivers/mouse/ps2mouse4d/: meson.build  ps2mouse.asm
kernel/: kernel.asm  meson.build
kernel/bootloader/: boot_fat12.asm  meson.build
programs/: macros.inc
programs/develop/c_libs/neolibc/include/sys/: ksys.h
programs/develop/c_libs/neolibc/src/crt/: crt0.asm
programs/develop/cedit/: meson.build
programs/develop/cedit/SRC/: OpenDlg.ob07  Toolbar.ob07  Utils.ob07
programs/develop/cobj/: cobj.asm  meson.build
programs/develop/h2d2b/: h2d2b.asm  meson.build
programs/develop/heed/: heed.asm  meson.build
programs/develop/ktcc/lib/libgb/: gb.c
programs/develop/ktcc/lib/tiny/: tiny.asm
programs/develop/ktcc/libc.obj/include/: conio.h  stdio.h  time.h
programs/develop/ktcc/libc.obj/include/clayer/: dialog.h  gb.h  http.h  inputbox.h  msgbox.h  rasterworks.h
programs/develop/ktcc/libc.obj/samples/: basic_gui.c  build_all.sh  consoleio.c  file_io.c  http_tcp_demo.c  libc_test.c  math_test.c  sdltest.c
programs/develop/ktcc/libc.obj/samples/clayer/: boxlib.c  libimg.c  msgbox.c  rasterworks.c
programs/develop/ktcc/libc.obj/samples/fasm/: sprintf_test.asm
programs/develop/ktcc/libc.obj/source/: Tupfile.lua  meson.build
programs/develop/ktcc/libc.obj/source/crt/: crt0.asm
programs/develop/ktcc/libc.obj/source/ctype/: is.c
programs/develop/ktcc/libc.obj/source/libtcc1/: memmove.asm  memset.asm
programs/develop/ktcc/libc.obj/source/stdio/: clearerr.c  conio.c  fclose.c  feof.c  ferror.c  fflush.c  fgetpos.c  fopen.c  format_print.c  fread.c  freopen.c  fscanf.c  fseek.c  fsetpos.c  ftell.c  fwrite.c  getchar.c  perror.c  remove.c  rename.c  rewind.c  scanf.c  setbuf.c  setvbuf.c  sscanf.c  tmpfile.c  tmpnam.c  ungetc.c  vprintf.c
programs/develop/ktcc/libc.obj/source/stdlib/: strtol.c
programs/develop/ktcc/libc.obj/source/string/: memchr.c  memcmp.c  memcpy.c  strcat.c  strchr.c  strcmp.c  strcoll.c  strcpy.c  strcspn.c  strerror.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c  strxfrm.c  unconst.h
programs/develop/ktcc/source/: Makefile.kos32  Tupfile.lua  config.h_meos  readme_kos32.txt  tcckx.c
programs/develop/ktcc/source/lib/: buildtcclib1.bat
programs/develop/ktcc/source/tests/tests2/: 000_cvttoftol.c  46_grep.c
programs/develop/libraries/box_lib/asm/trunk/: data.inc
programs/develop/libraries/box_lib/trunk/: meson.build
programs/develop/libraries/console_coff/: meson.build
programs/develop/libraries/dll/: meson.build
programs/develop/libraries/http/: http.asm  meson.build
programs/develop/libraries/http/examples/: deflate.asm  get.asm
programs/develop/libraries/libs-dev/libgfx/: meson.build
programs/develop/libraries/libs-dev/libimg/: libimg.asm  meson.build
programs/develop/libraries/libs-dev/libini/: libini.asm  libini_p.asm  meson.build
programs/develop/libraries/libs-dev/libio/: meson.build
programs/develop/libraries/proc_lib/: meson.build  proc_lib.asm
programs/develop/libraries/sorter/: meson.build  sort.txt
programs/develop/neolibc/: neos.ld
programs/develop/neolibc/include/sys/: ksys.h
programs/develop/neolibc/src/crt/: crt0.asm
programs/develop/oberon07/lib/KolibriOS/: OpenDlg.ob07
programs/develop/tinypad/trunk/data/: tp-idata.inc
programs/fs/kfar/trunk/: kfar.asm  meson.build
programs/fs/kfar/trunk/kfar_arc/: kfar_arc.asm  meson.build
programs/fs/lod/: lod.asm
programs/fs/opendial/: meson.build  opendial.asm
programs/fs/unz/: unz.asm
programs/games/pipes/: meson.build  pipes.asm
programs/games/tetris/: meson.build  tetris.asm
programs/media/animage/: lib_data.inc
programs/media/kiv/: kiv.asm  meson.build
programs/media/midamp/trunk/: midamp.asm
programs/media/scrshoot/: scrshoot.asm
programs/media/zsea/: zSea.ini
programs/media/zsea/plugins/png/: meson.build
programs/network/downloader/: downloader.asm
programs/other/calcplus/: meson.build
programs/other/fb2reader/SRC/: OpenDlg.ob07
programs/other/kpack/trunk/: const_var.inc
programs/other/rtfread/: rtfread.asm
programs/system/RunOD/: RunOD.asm
programs/system/RunOD/1/: RUN.asm
programs/system/amd_temp_view/: AMDtemp.asm
programs/system/board/: board.asm  meson.build
programs/system/calendar/: calendar.asm  meson.build  readme.txt
programs/system/eskin/: eskin.asm  meson.build
programs/system/hdd_info/trunk/: hdd_info.asm
programs/system/icon_new/: RButton.inc  icon.asm  meson.build
programs/system/launcher/: launcher.asm  meson.build
programs/system/loaddrv/: meson.build
programs/system/menu/: menu.asm  meson.build
programs/system/nash/: Nash.ob07  meson.build
programs/system/nsh/: main.c  meson.build
programs/system/open/: open.asm
programs/system/procman/: meson.build  procman.asm
programs/system/rdsave/trunk/: rdsave.asm
programs/system/reshare/: meson.build  reshare.asm
programs/system/setup/: meson.build  setup.asm
programs/system/skincfg/trunk/: idata.inc
programs/system/taskbar/: TASKBAR.ASM  meson.build
programs/testing/cpuid/trunk/: CPUID.ASM
programs/testing/fspeed/: idata.inc
programs/testing/mgb/trunk/: mgb.asm
programs/testing/pcidev/trunk/: PCIDEV.ASM
skins/Shkvorka/: author.txt  build.bat  colors.dtp.asm  default.asm  meson.build
skins/gnome_green/: author.txt  default.asm  default.dtp.asm  meson.build  skin.inc
skins/vista_basic_black/: default.asm  default.dtp.asm  meson.build
